--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -590,7 +590,7 @@ EDA.PropTable.Function <- function(FactorVar) {
 |      **[B.1]** <span style="color: #FF0000">PC1</span> = 2.22
 |      **[B.1]** <span style="color: #FF0000">PC2</span> = 1.67
 |
-| **[C]** <span style="color: #FF0000">PC1</span> can be described as having a collectively high or low critic / audience scores, oscar nominations and oscar winnability rate, as characterized by the following descriptor variables, ranked based on contribution and statistical significance:
+| **[C]** <span style="color: #FF0000">PC1</span> can be described as having a collectively high or low critic and audience scores, oscar nominations and oscar winnability rate, as characterized by the following descriptor variables, ranked based on contribution and statistical significance:
 |      **[C.1]** High <span style="color: #FF0000">Tomatometer_Critic</span> = 23.09%
 |      **[C.2]** High <span style="color: #FF0000">IMDB_Audience</span> = 22.92%
 |      **[C.3]** High <span style="color: #FF0000">Tomatometer_Audience</span> = 19.56%
@@ -956,7 +956,6 @@ DR_PCA_IND$contrib[,c("Dim.1","Dim.2")]
 | **[C]** Evaluating both <span style="color: #FF0000">Editing</span> and <span style="color: #FF0000">Genre</span> descriptors, <span style="color: #FF0000">Editing=WON</span> was observed to be associated with <span style="color: #FF0000">Genre=War</span> and <span style="color: #FF0000">Genre=Music</span>. These included war movies like The Hurt Locker, Hacksaw Ridge and Dunkirk; and music movies like Whiplash and The Sound of Metal.
 |
 | **[D]** Evaluating both <span style="color: #FF0000">Screenplay</span> and <span style="color: #FF0000">Genre</span> descriptors, <span style="color: #FF0000">Screenplay=WON</span> was observed to be associated with <span style="color: #FF0000">Genre=LGBTQ+</span>, <span style="color: #FF0000">Genre=Thriller</span> and <span style="color: #FF0000">Genre=Comedy</span>. These included LGBTQ+ movies like Moonlight and Call me By Your Name; thriller movies like Get Out, Parasite and Promising Young Woman; and comedy movies like The Descendants, Her, Birdman or (The Unexpected Virtue of Ignorance), The Big Short, BlacKkKlansman, Green Book, Jojo Rabbit and Everything Everywhere All at Once.
-
 |
 ```{r section_1.5.2, warning=FALSE, message=FALSE}
 ##################################
@@ -1876,6 +1875,35 @@ DR_CA_Screenplay_COL$contrib
 ###  1.5.3 Multiple Correspondence Analysis (MCA)
 |
 | [Multiple Correspondence Analysis](https://www.oreilly.com/library/view/multiple-factor-analysis/9781498786690/) performs a series of transformations which allows for the computation of the coordinates of the categories of the qualitative variables, as well as the coordinates of the observations in a representation space that is optimal for a criterion based on inertia. The method, which is a generalization of the Correspondence Analysis (CA) to multiple qualitative variables, assigns optimal scale values (category quantifications) to each category of each variable in such a way that overall, on average, the categories have maximum spread. Because categories of a variable receive as many scorings as there are dimensions, the variables in the analysis are assumed to be multiple nominal in optimal scaling level. It also assigns scores to the objects in the analysis in such a way that the category quantifications are the averages, or centroids, of the object scores of objects in that category. The resulting solution shows objects within the same category plotted close together and objects in different categories plotted far apart. Each object is as close as possible to the category points of categories that apply to the object. In this way, the categories divide the objects into homogeneous subgroups. Variables are considered homogeneous when they classify objects in the same categories into the same subgroups.
+|
+| **[A]** The percentage contributions for each principal component derived from the analysis in explaining the variance in the dataset are given as follows:
+|      **[A.1]** <span style="color: #FF0000">PC1</span> = 20%
+|      **[A.2]** Combined <span style="color: #FF0000">PC1</span> and <span style="color: #FF0000">PC2</span> = 37%
+|      **[A.3]** Combined <span style="color: #FF0000">PC1</span>, <span style="color: #FF0000">PC2</span> and <span style="color: #FF0000">PC3</span> = 52%
+| 
+| **[B]** Due to the high number of descriptors and levels, no eigenvalue was sufficiently greater than 1. Nevertheless, all subsequent analysis was only proceeded for <span style="color: #FF0000">PC1</span> and <span style="color: #FF0000">PC2</span>.
+|
+| **[C]** <span style="color: #FF0000">PC1</span> can be described as having been collectively awarded in the directing and cinematography categories, as characterized by the following descriptor variables, ranked based on contribution:
+|      **[C.1]** <span style="color: #FF0000">Directing=WON</span> = 31.74%
+|      **[C.2]** <span style="color: #FF0000">Cinematography=WON</span> = 13.58%
+| 
+| **[D]** <span style="color: #FF0000">PC2</span> can be described as having been awarded in the editing category but was not nominated in the screenplay category, as characterized by the following descriptor variables, ranked based on contribution:
+|      **[D.1]** <span style="color: #FF0000">Screenplay=NNOM</span> = 29.12%
+|      **[D.2]** <span style="color: #FF0000">Editing=WON</span> = 18.01%
+|
+| **[E]** With both <span style="color: #FF0000">PC1</span> and <span style="color: #FF0000">PC2</span> considered,the following relationships were observed among descriptor variables:
+|      **[E.1]** The most represented descriptor variables and their corresponding levels are as follows:
+|             **[E.1.1]** <span style="color: #FF0000">Directing=WON</span>
+|             **[E.1.2]** <span style="color: #FF0000">Cinematography=WON</span>
+|             **[E.1.3]** <span style="color: #FF0000">Screenplay=NNOM</span>
+|             **[E.1.4]** <span style="color: #FF0000">Editing=WON</span>
+|      **[E.2]** Descriptor variables demonstrated correlation and clustered around two groups:
+|             **[E.2.1]** Cluster 1 (<span style="color: #FF0000">Directing=WON</span>, <span style="color: #FF0000">Cinematography=WON</span>) indicates that winning the directing award is associated with equally winning the cinematography.
+|             **[E.2.2]** Cluster 2 (<span style="color: #FF0000">Editing=WON</span>, <span style="color: #FF0000">Screenplay=NNOM</span>) indicates that winners awarded with best in editing were not nominated for screenplay.
+|
+| **[F]** With both <span style="color: #FF0000">PC1</span> and <span style="color: #FF0000">PC2</span> considered,the following relationships were observed among individual instances:
+|      **[F.1]** Movies which won for direction also won for cinematography (e.g. Life of Pi, Gravity, Birdman or (The Unexpected Virtue of Ignorance), The Revenant, La La Land and Roma).
+|      **[F.2]** Movies which won for editing are most associated with the absence of a nomination for screenplay (e.g. Gravity, Mad Max: Fury Road, Hacksaw Ridge, Dunkirk, Bohemian Rhapsody and Ford v Ferrari).
 |
 ```{r section_1.5.3, warning=FALSE, message=FALSE}
 ##################################
